consolidate API code
