# backend/app/api/v1/v1_ctrl_items.go
@@ -3,12 +3,8 @@ package v1
 import (
 	"encoding/csv"
 	"errors"
-	"fmt"
 	"net/http"
-	"path/filepath"
 
-	"github.com/go-chi/chi/v5"
-	"github.com/google/uuid"
 	"github.com/hay-kot/homebox/backend/ent/attachment"
 	"github.com/hay-kot/homebox/backend/internal/services"
 	"github.com/hay-kot/homebox/backend/internal/types"
@@ -70,7 +66,7 @@ func (ctrl *V1Controller) HandleItemsCreate() http.HandlerFunc {
 // @Summary   deletes a item
 // @Tags      Items
 // @Produce   json
-// @Param     id       path      string            true  "Item ID"
+// @Param     id  path  string  true  "Item ID"
 // @Success   204
 // @Router    /v1/items/{id} [DELETE]
 // @Security  Bearer
@@ -120,7 +116,7 @@ func (ctrl *V1Controller) HandleItemGet() http.HandlerFunc {
 // @Summary   updates a item
 // @Tags      Items
 // @Produce   json
-// @Param     id  path  string  true  "Item ID"
+// @Param     id       path      string            true  "Item ID"
 // @Param     payload  body      types.ItemUpdate  true  "Item Data"
 // @Success   200  {object}  types.ItemOut
 // @Router    /v1/items/{id} [PUT]
@@ -233,14 +229,15 @@ func (ctrl *V1Controller) HandleItemAttachmentCreate() http.HandlerFunc {
 			attachmentName = "attachment"
 		}
 
-		uid, user, err := ctrl.partialParseIdAndUser(w, r)
+		uid, _, err := ctrl.partialParseIdAndUser(w, r)
 		if err != nil {
 			return
 		}
 
+		ctx := services.NewServiceContext(r.Context())
+
 		item, err := ctrl.svc.Items.AttachmentAdd(
-			r.Context(),
-			user.GroupID,
+			ctx,
 			uid,
 			attachmentName,
 			attachment.Type(attachmentType),
@@ -254,103 +251,5 @@ func (ctrl *V1Controller) HandleItemAttachmentCreate() http.HandlerFunc {
 		}
 
 		server.Respond(w, http.StatusCreated, item)
-	}
-}
-
-// HandleItemAttachmentGet godocs
-// @Summary   retrieves an attachment for an item
-// @Tags      Items
-// @Produce   application/octet-stream
-// @Param     id     path   string  true  "Item ID"
-// @Param     token  query  string  true  "Attachment token"
-// @Success   200
-// @Router    /v1/items/{id}/attachments/download [GET]
-// @Security  Bearer
-func (ctrl *V1Controller) HandleItemAttachmentDownload() http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		token := server.GetParam(r, "token", "")
-
-		path, err := ctrl.svc.Items.AttachmentPath(r.Context(), token)
-
-		if err != nil {
-			log.Err(err).Msg("failed to get attachment")
-			server.RespondServerError(w)
-			return
-		}
-
-		w.Header().Set("Content-Disposition", fmt.Sprintf("attachment; filename=\"%s\"", filepath.Base(path)))
-		w.Header().Set("Content-Type", "application/octet-stream")
-		http.ServeFile(w, r, path)
-	}
-}
-
-// HandleItemAttachmentToken godocs
-// @Summary   retrieves an attachment for an item
-// @Tags      Items
-// @Produce   application/octet-stream
-// @Param     id             path  string  true  "Item ID"
-// @Param     attachment_id  path  string  true  "Attachment ID"
-// @Success   200            {object}  types.ItemAttachmentToken
-// @Router    /v1/items/{id}/attachments/{attachment_id} [GET]
-// @Security  Bearer
-func (ctrl *V1Controller) HandleItemAttachmentToken() http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		uid, user, err := ctrl.partialParseIdAndUser(w, r)
-		if err != nil {
-			return
-		}
-
-		attachmentId, err := uuid.Parse(chi.URLParam(r, "attachment_id"))
-		if err != nil {
-			log.Err(err).Msg("failed to parse attachment_id param")
-			server.RespondError(w, http.StatusBadRequest, err)
-			return
-		}
-
-		token, err := ctrl.svc.Items.AttachmentToken(r.Context(), user.GroupID, uid, attachmentId)
-
-		if err != nil {
-			log.Err(err).Msg("failed to get attachment")
-			server.RespondServerError(w)
-			return
-		}
-
-		server.Respond(w, http.StatusOK, types.ItemAttachmentToken{
-			Token: token,
-		})
-
-	}
-}
-
-// HandleItemAttachmentDelete godocs
-// @Summary   retrieves an attachment for an item
-// @Tags      Items
-// @Param     id             path      string  true  "Item ID"
-// @Param     attachment_id  path      string  true  "Attachment ID"
-// @Success   204
-// @Router    /v1/items/{id}/attachments/{attachment_id} [DELETE]
-// @Security  Bearer
-func (ctrl *V1Controller) HandleItemAttachmentDelete() http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		uid, user, err := ctrl.partialParseIdAndUser(w, r)
-		if err != nil {
-			return
-		}
-
-		attachmentId, err := uuid.Parse(chi.URLParam(r, "attachment_id"))
-		if err != nil {
-			log.Err(err).Msg("failed to parse attachment_id param")
-			server.RespondError(w, http.StatusBadRequest, err)
-			return
-		}
-
-		err = ctrl.svc.Items.AttachmentDelete(r.Context(), user.GroupID, uid, attachmentId)
-		if err != nil {
-			log.Err(err).Msg("failed to delete attachment")
-			server.RespondServerError(w)
-			return
-		}
-
-		server.Respond(w, http.StatusNoContent, nil)
 	}
 }
